# askchitrank

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cliff.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test.py
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: __init__.py  app.py
api/overview/: index.html
api/schemas/: chat.py  health.py  safety_metrics.py
api/utils/: auth.py  errors.py  middleware.py  rate_limit.py
api/v1/: __init__.py  chat.py  health.py  ingest.py
architecture/overview/: index.html
bruno/: 02_chat_stream.bru  03_chat_full.bru  04_chat_cached.bru  05_chat_multiturn.bru  06_auth_missing_token.bru  07_auth_invalid_token.bru  08_validation_empty_question.bru  09_validation_question_too_long.bru  10_validation_unknown_field.bru  11_ingest_webhook.bru  12_ingest_missing_token.bru  13_ingest_invalid_token.bru  bruno.json  health.bru
bruno/environments/: Local.bru
bruno/v1/: 01_health.bru  03_chat_full.bru  06_auth_missing_token.bru  10_validation_unknown_field.bru  13_ingest_invalid_token.bru  Chat.bru  Health.bru  Ingest.bru
changelog/: index.html
chat/overview/: index.html
concepts/overview/: index.html
concepts/roi_improvements/: index.html
concepts/safety_routing/: index.html
development/database/: index.html
development/setup/: index.html
development/tech_stack/: index.html
docs/: index.md
docs/api/: overview.md
docs/architecture/: overview.md
docs/chat/: overview.md
docs/concepts/: overview.md  roi_improvements.md  safety_routing.md
docs/development/: database.md  setup.md  tech_stack.md
docs/ingestion/: overview.md
docs/retrieval/: overview.md
ingestion/overview/: index.html
retrieval/overview/: index.html
retrival/overview/: index.html
scripts/: menu.py
search/: search_index.json
src/: main.py
src/chat/: __init__.py  (+5 more)
tests/: test_chat_safety.py  test_context_fallback.py  test_dev_responder.py  test_ingestion_chunking.py  test_local_embeddings.py  test_retrieval_confidence.py
(+28 files in other folders)
