[project]
name = "askchitrank"
version = "0.5.0"
description = "RAG-powered AI assistant that answers questions about Chitrank — trained on resume, portfolio, and work history."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Chitrank Agnihotri", email = "chitrank2050@gmail.com" }]

dependencies = [
  "alembic>=1.13.0",
  "asyncpg>=0.30.0",
  # API
  "fastapi>=0.115.0",
  # LLM + Embeddings
  "greenlet>=3.3.2",
  "groq>=0.11.0",
  "httpx>=0.27.0",
  "loguru>=0.7.3",
  "pgvector>=0.4.2",
  "psycopg2-binary>=2.9.0",
  # Application
  "pydantic>=2.0.0",
  "pydantic-settings>=2.13.0",
  # Document processing
  "pypdf>=4.0.0",
  "python-multipart>=0.0.9",
  # Database
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0.0",
  "supabase>=2.0.0",
  "tenacity>=8.0.0",
  "uvicorn[standard]>=0.34.0",
  "voyageai>=0.3.0",
]

[project.scripts]
dev = "src.main:main"

[dependency-groups]
dev = [
  "build>=1.4.0",
  "git-cliff>=2.12.0",
  "httpx>=0.27.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.5",
  "mkdocstrings[python]>=1.0.3",
  "pre-commit>=4.5.1",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "questionary>=2.0",
  "ruff>=0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "src/db/migrations/versions",
]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PTH", "G", "RUF"]
ignore = ["E501", "B008", "G004"]
dummy-variable-rgx = "^_.*"

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
